<resources>
    <string name="app_name">Sounds der Oberpfalz Projekt</string>
    <string name="title_activity_map_bergfeste">MapBergfesteActivity</string>
    <string name="title_activity_map_kirwas">MapKirwasActivity</string>
    <string name="title_activity_map_braeuche">MapBraeucheActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="button_start">Start</string>
    <string name="button_watch">Betrachten</string>
    <string name="action_settings">Settings</string>
    <string name="text_help_button">Hilfe</string>
    <string name="text_back_button">Zurück</string>
    <string name="help_description_startScreen">Berühren Sie das Feld "Start", um verschiedene Bräuche aus der Oberpfalz kennenzulernen.</string>
    <string name="help_description0">Liebe Besucher,\nauf diesem Bildschirm können Sie mehr über Feste und Bräuche in der Oberpfalz erfahren. Berühren Sie dazu die Elemente mit dem Finger.</string>
    <string name="help_description1">Links oben können Sie zwischen den Kategorien Kirwan, Bergfeste und Kuriosa wählen. </string>
    <string name="help_description2">Auf der Karte erscheinen alle Bräuche dieser Kategorie als kleine Kreise. Diese können Sie ebenfalls antippen.</string>
    <string name="help_description3">Das Feld "Betrachten" erscheint dann, wenn es Fotos oder Videos zu einem Brauch gibt.</string>
    <string name="help_description4">Die Fotos können Sie durch Antippen vergrößern. Berühren Sie das vergrößerte Foto und wischen Sie mit dem Finger nach rechts oder links, um das nächste Bild zu sehen.</string>
    <string name="button_kuriosa">Kuriosa</string>
    <string name="description_kuriosa">Hier finden Sie besonders außergewöhnliche Bräuche, Feste und religiöse Besonderheiten im Oberpfälzer Raum.</string>
    <string name="button_kirwan">Kirwan</string>
    <string name="description_kirwan">Die Kirwa wird seit dem Mittelalter als religiöses Fest anlässlich der Kirchweihe eines christlichen Kirchengebäudes gefeiert.</string>
    <string name="button_bergfeste">Bergfeste</string>
    <string name="description_bergfeste">Bergfest ist eine regionale Kurzbezeichnung für zahlreiche Volks-, Heimat- oder Kirchenfeste, bei denen ein Berg als Veranstaltungsort oder als identitätsstiftender Namensgeber fungiert.</string>
    <string name="start_screen_headline">Erkunden Sie die Feste und Bräuche in der Oberpfalz!</string>
    <string name="start_screen_waiting">Bitte warten Sie, während die App gestartet wird.</string>
    <string name="drachenstich_titel">Drachenstich \nFurth im Wald</string>
    <string name="pfingstritt_titel">Pfingstritt \nBad Kötzting</string>
    <string name="fischzug_titel">Fischzug \nSchmidmühlen</string>
    <string name="chinesenfasching_titel">Chinesenfasching \nDietfurt</string>
    <string name="oisinga_titel">„Oiasinga“ \nEtzelwang</string>
    <string name="maibaum_titel">Maibaumaufstellen \nBrennberg</string>
    <string name="pavillion_titel">Nepal-Himalaya-Pavillon \nWiesent</string>
    <string name="specht_titel">Die Specht \nMünchenreuther</string>
    <string name="oarschboussn_titel">Oarschboußn \nOberviechtach</string>
    <string name="ratschn_titel">Moisterratschn und \nKlamperl Waidhaus</string>
    <string name="drachenstich_detail">Einmal im Jahr verwandelt sich ganz Furth im Wald 
für zwei Wochen im August zum Schauplatz des Drachenstichs.

Wenn der größte, vierbeinig schreitende Roboter der Welt  
(Eintrag im Guinness Buch der Rekorde: 12 Tonnen) 
seine „Höhle“ verlässt, beginnt Bayerns ältestes Volksschauspiel.

Die Tradition des Drachenstichs 
geht auf die jährliche Pfingstprozession der Stadt zurück. 
Bereits im 18. Jahrhundert stellten die Further hier 
die Legende des Drachentöters Sankt Georg nach.  

Heute verhindert ein todesmutiger Ritter, 
durch seinen Lanzenstoß in den Schlund der Bestie,
den sicheren Tod des gesamten Dorfes.

Jährlich lockt der Drachenstich über …. Besucher in die Gemeinde.</string>
    <string name="pfingstritt_detail">Hoch zu Ross bestreiten die Bad Kötztinger Herren und Burschen
um die Pfingstzeit die Wallfahrt zur kleinen Kirche in Steinbühl.
Der krönende Abschluss der Zeremonie (im wahrsten Sinne)
ist die symbolische Hochzeit des „Pfingstbrautpaares“.

Diese Tradition lässt sich bis auf Unterbrechungen
während der Weltkriege sowie der Säkularisation bis 1640 zurückverfolgen.</string>
    <string name="fischzug_detail">Am Aschermittwoch in Schmidmühlen um „oans“
betrauert Schmidmühlen die närrische Zeit auf hohem Niveau:
In Frack, mit Zylinder und im exakten Gänsemarsch
bewegen sich die „Fischzügler“ durch das Dorf und 
kehren in Wirtschaften ein.
Dort verzehren die „Fischzügler“ mitgebrachte Kronsardinen 
mit trockenem Brot und reichlich Freibier vom  Wirt als Katerbrotzeit.

(Im Jahr 2001: 8 Gasthäuser, 800 – 1000 Kronsardinen, 50 Pfund Brot, 350 Maß Bier!)
Der Höhepunkt des Fischzuges: 
Um Mitternacht vergräbt die Trauergemeinschaft einen
 - nach der Faschingszeit - leeren Geldbeutel.
Sein „Grab“ ist das Loch des zukünftigen Kirwabaums.
Der Fischzug geht auf einen Heischebrauch zurück,
der angeblich bis ins 19. Jahrhundert zurückgeht.
Belege existieren nur aus der Zeit nach dem zweiten Weltkrieg.</string>
    <string name="chinesenfasching_detail">„Chinesen aus Bayern wollen immer feiern …”,
hallt es jährlich am Unsinnigen Donnerstag durch die Stadt,
wenn die Dietfurter ihrem Kaiser huldigen.
Der kunterbunte Faschingsumzug umfasste 2001 
50 Gruppen und Motivwagen und
lockte ca. 20 000 feierwütige Besucher in die Gemeinde.

Warum und seit wann sich die Dietfurter als Chinesen bezeichnen ist ungewiss.
Eine Anekdote besagt, dass einst der Bischof von Eichstätt
seinen Kämmerer entsandte, um Abgaben einzufordern.
Da die Dietfurter um das Vorhaben des Kämmerers wussten, 
gewährten diese ihm keinen Einlass.
Daraufhin berichtete der erboste Kämmerere seinem Bischof,
dass die Dietfurter ihm wie die "Chinesen" vorkämen – 
sie verschanzten sich hinter ihrer Mauer und nähmen keine Notiz von einem bischöflichen Kämmerer.</string>
    <string name="oisinga_detail">Begibt man sich am Ostersonntag
auf einen Spaziergang durchs nächtliche Etzelwang,
erwartet einem eine ganz besondere Geräusch-/Gesangskulisse:
„Oiasinga, Oiasinga, o, san mia vasuffne Dinga,
wenn ma niat drei Oia kröing, naou kinn ma nimma singa.“,
mit diesem vergnügtem Ansingvers auf den Lippen
bitten die Etzelwanger Junggesellen (meist Kirwa-Boum)
vor den Haustüren spendabler Dorfbewohner um Gaben.
Der Brauch lässt sich bis zur Jahrhundertwende zurückverfolgen.
Ursprünglich wurde nur um Eier gebeten und 
Mädchen durften nicht am nächtlichen Umzug teilnehmen.
Heutzutage landen Schnaps, Wurst, Speck oder Geld 
in den Apfelpflückern der jungen Burschen und Mädchen (!).
Sind alle Häuser abgeklappert, 
verzehren die „Oiasingara“ ihre erbeuteten Gaben 
noch in derselben Nacht und teilen diese kameradschaftlich.</string>
    <string name="maibaum_detail">Stellt man die Frage, welche Bedeutung der Maibaum hat,
wird man sofort auf einen Fruchtbarkeitsbrauch hingewiesen.
Es gibt widersprüchliche Thesen über die Herkunft des Maibaums,
allerdings lassen sich keine eindeutigen Hinweise finden.
Im 16. und zu Beginn des 17.Jahrhunderts wurde das Maibaumaufstellen verboten.
Eine kurpfälzische Landesverordnung sollte die Waldbesitzer davor bewahren,
dass das „Gesindel“ ihre Bäume für den Maibaum fällt.
Erst nach dem Dreißigjährigen Krieg kam der Maibaumbrauch wieder auf.
Soldaten errichteten zu Ehren der Fürsten und Offiziere Ehrenbäume und
erhielten dafür reichlich Maibier.
Dadurch geriet der Maibaum wieder in das Bewusstsein der Bürger.
Die Kirche vereinnahmte den Baum erst später als Symbol der Erlösung 
und Auferstehung an Ostern.
Heute bringt der Maibaum die Menschen an seinem Festtag wieder näher zusammen.
</string>
    <string name="pavillion_detail">Wer nepalesische und tibetanische Tempel oder die unglaubliche Artenvielfalt des Himalaya sehen will, muss sich nicht unbedingt ins Flugzeug setzen und um die halbe Erde fliegen. 
Es gibt einen zauberhaften Ort, angrenzend an Wiesent in der Oberpfalz, am Fuße des bayerischen Waldes. Der Besitzer Herr Heri Wirth entdeckte 2000 den Nepal- Himalaya- Pavillon auf der expo 2000 in Hannover, als dieser als einer der 168 Länderpavillons diente. Er galt mit rund 3,5 Millionen Menschen, als meist besuchter Länderpavillon. An seinem ursprünglichen Standort auf der expo 2000 wurde der Pavillon in Einzelteile zerlegt, die nach Wiesent transportiert wurden. 
Im Juli 2003 wurde der originalgetreue Wiederaufbau fertig gestellt und ist seit dem 15. Juli 2003 wieder für die Öffentlichkeit zugänglich. 

Der Nepal-Himalaya-Pavillon ist ein Ort inmitten der Oberpfalz, an dem sich Kultur und Natur auf das Innigste verbinden. 
Die weltweit größte Sammlung an Himalayapfalnzen befindet sich im Himalayagarten, ein Chinagarten und zahlreiche nepalesische Kunstwerke betten den beeindruckenden Tempel ein.

Erwähnenswert ist, dass alle Eintrittsgelder an die Stiftung „Wasser für die Welt“ gehen, die damit Wasserprojekte in der Dritten Welt finanziert.

Dieser Ort sei als Ort der Begegnung zu verstehen, ein Ort, an dem man „eins sein kann mit der Natur“ – ein Ort, an dem alle Konfessionen gleich sind – Hinduisten, Buddhisten, Katholiken, Protestanten und viele mehr bereichern sich und lernen voneinander…        </string>
    <string name="specht_detail">„Wetz de, wetz de – Baach aafschnei’n!“

Bei der „Specht“ handelt es sich um eine alte Brauchtumsfigur eines germanischen Naturdämons. Der in der Oberpfalz vor allem in der bäuerlichen Bevölkerung weit verbreitete Brauch galt eigentlich als bereits ausgestorben.  Dennoch kann man ihn heute noch stark vereinzelt in Familien der östlichen Oberpfalz (Tirschenreuth) auffinden.   

Verkleidet ist die “Specht“ mit Stroh alten Kleidern oder einem Betttuch, das meist blutbespritzt ist. Im Gesicht hat sie einen langen schwarzen Schnabel und in der Hand hält sie eine große Schere oder eine Sichel mit denen sie Kindern symbolisch den Bauch aufschlitzt. 
Sie taucht ganz unerwartet auf und jagt durch das Dorf wobei sie ihr Instrument an einem Schleifstein wetzt und dazu folgendes spricht: „Wetz de wetz de – Baach aafschnei’n“. 
Die Kinder u. die Jugendlichen, die bereits auf sie gewartet haben laufen schreiend davon.
Das angedrohte Bauchaufschneiden tritt heute in den Hintergrund, obwohl die Specht hier die Rolle einer Strafenden an Stelle der Eltern übernimmt. 

Genauso schnell wie die „Specht“ auftaucht, geht das Spektakel auch wieder zu Ende. Die „Specht“ verschwindet wie ein Dämon aus längst vergangener Zeit. Um diesen Kinderschreckgeist zu  besänftigen muss man ihn füttern, in dem man ihm Essen in den Garten bringt. Zum Beispiel werden überdies Obstbäume geschüttelt, damit diese im nächsten Jahr wieder viel Obst tragen. Als Dank sorgt die „Specht“ für ein fruchtbares neues Jahr. 

Seit den 90er Jahren wurde das Spektakel zur Touristenattraktion ausgebaut und nährt sich von Mediengesellschaften und vielen Zuschauern.         </string>
</resources>