<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund_himmelblau"
    tools:context=".HelpActivity" >
    <TextView 
        android:id="@+id/help_Text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/help_description0"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/help_ImageView_1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/help_Text_0"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_help_1" />

    <TextView
        android:id="@+id/help_Text_1"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/help_ImageView_1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/help_ImageView_1"
        android:text="@string/help_description1"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/help_ImageView_2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/help_ImageView_1"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_help_2" />

    <TextView
        android:id="@+id/help_Text_2"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/help_ImageView_2"
        android:layout_below="@id/help_Text_1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/help_ImageView_2"
        android:text="@string/help_description2"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/help_Text_3"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/help_ImageView_3"
        android:layout_below="@id/help_Text_2"
        android:layout_toRightOf="@id/help_ImageView_3"
        android:layout_alignLeft="@id/help_Text_2"
        android:text="@string/help_description3"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_back"
        style="@style/btnStyleShakespeare"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text_back_button"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/help_ImageView_3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/button_back"
        android:layout_below="@+id/help_ImageView_2"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_help_3" />

    <TextView
        android:id="@+id/help_Text_4"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_ImageView_3"
        android:layout_toRightOf="@+id/help_ImageView_4"
        android:layout_alignLeft="@id/help_Text_3"
        android:text="@string/help_description4"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/help_ImageView_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/help_ImageView_3"
        android:layout_alignTop="@+id/help_Text_4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_tap" />

</RelativeLayout>